= Asciidoctor Tabs Changelog
:url-repo: https://github.com/asciidoctor/asciidoctor-tabs

This document provides a curated view of the changes to Asciidoctor Tabs per release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

=== Added

* In tabs script, add `tab` class to tab element

=== Changed

* When inline anchor is used for tab ID, promote value of id attribute to id attribute on tab and remove anchor

=== Fixed

* Apply normal substitutions to principal text (first paragraph) of tab's content (#29)

== 1.0.0-alpha.6 (2022-11-16) - @mojavelinux

=== Added

* Honor title on tabs block; apply normal subs to it (#26)
* Clear location hash (URL fragment) when a tab is clicked (#24)
* Register ref for each tab so its ID can be used as target of xref (#24)
* Activate tab when selected from an internal xref (#24)

=== Fixed

* Decode fragment from URL so it can be matched against tab ID (#27)

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.6[git tag] | {url-repo}/compare/v1.0.0-alpha.5\...v1.0.0-alpha.6[full diff]

== 1.0.0-alpha.5 (2022-10-23) - @mojavelinux

=== Added

* Link to stylesheet (style) and script (behavior) if `linkcss` attribute is set on document (#7)
* Honor safe mode settings (don't read files if safe mode is secure) (#7)

=== Changed

* Rename Docinfo::Styles class to Docinfo::Style (#22)
* Add smoke test for npm package (#19)

=== Fixed

* Prevent dlist ref from being registered again to avoid warning when filetype is not html (#21)
* Restore missing default style and behavior in JavaScript version by mapping data dir to dist folder in npm package (#18)

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.5[git tag] | {url-repo}/compare/v1.0.0-alpha.4\...v1.0.0-alpha.5[full diff]

== 1.0.0-alpha.4 (2022-10-08) - @mojavelinux

=== Added

* Define exports for behavior (tabs.js) and style (tabs.css) in npm package

=== Changed
